# yozefu

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md  aa  compose.yml  deny.toml  flake.nix  security.md  typos.toml
.cargo/: audit.toml  config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Cross.toml  actionlint.yml  automerge.yml  build.yml  changelog.yml  code-coverage.yml  developer-experience.yml  documentation.yml  mutant.yml  publish.yml  security.yml  semver-checks.yml  tag.yml
benches/: Feeder.java  search_engine.rs
crates/app/: Cargo.toml  README.md
crates/app/benches/: search_engine.rs
crates/app/src/: app.rs  consumer.rs  lib.rs
crates/app/src/admin/: mod.rs
crates/app/src/configuration/: cluster_config.rs  consumer_config.rs  global_config.rs  internal_config.rs  mod.rs  workspace.rs  yozefu_config.rs
crates/app/src/search/: compare.rs  expression.rs  filter.rs  mod.rs
crates/app/tests/: global_config.rs
crates/app/tests/http_search_filter/: .gitignore  Cargo.toml  README.md  module.wasm
crates/app/tests/http_search_filter/src/: lib.rs
crates/app/tests/inputs/: 3332195051198198139.json
crates/command/: Cargo.toml  README.md  themes.json
crates/lib/: Cargo.toml  README.md
crates/lib/src/: error.rs  lib.rs
crates/lib/src/kafka/: avro.rs  data_type.rs  exported_kafka_record.rs  kafka_record.rs  kafka_record_test.rs  mod.rs  schema.rs  schema_registry_client.rs  schema_test.rs  topic.rs  topic_test.rs
crates/lib/src/kafka/internal/: mod.rs
crates/lib/src/kafka/internal/consumer_offset/: mod.rs
crates/lib/src/kafka/internal/consumer_offset/key/: consumer_offset_key.rs  group_metadata_key.rs  mod.rs  offset_commit_key.rs
crates/lib/src/kafka/internal/consumer_offset/value/: consumer_offset_value.rs  mod.rs  raw_tagged_field.rs
crates/lib/src/search/: atom.rs  clause.rs  expression.rs  expression_test.rs  filter.rs  filter_test.rs  mod.rs  number.rs  number_test.rs  offset.rs  order.rs  search_query.rs  symbol.rs  symbol_test.rs  term.rs
crates/lib/src/search/compare/: expression.rs  mod_test.rs
crates/lib/tests/: mod.rs
crates/lib/tests/deserializers/: mod.rs
crates/lib/tests/deserializers/avro/: mod.rs
crates/lib/tests/deserializers/avro/inputs/records/: record-multiple-schema-reference.json  record-schema-reference.json  record.json
crates/lib/tests/deserializers/avro/inputs/schemas/: key.json  line-with-shared-schema-reference.json  point-with-shared-schema-reference.json  schema-reference.json  shared-schema-reference.json  value-with-multiple-references.json  value-with-reference.json  value.json
crates/lib/tests/deserializers/avro/snapshots/: r#mod__deserializers__avro__avro_record.snap  r#mod__deserializers__avro__avro_record_unknown_primitive_type.snap  r#mod__deserializers__avro__avro_record_with_multiple_schema_references.snap  r#mod__deserializers__avro__avro_record_with_multiple_schema_references.snap.new  r#mod__deserializers__avro__avro_record_with_schema_reference.snap
crates/lib/tests/deserializers/text/: mod.rs
crates/lib/tests/deserializers/text/snapshots/: r#mod__deserializers__text__exported_record@record-1.json.snap  r#mod__deserializers__text__exported_record@record-2.json.snap  r#mod__deserializers__text__parse_records@record-1.json.snap  r#mod__deserializers__text__parse_records@record-2.json.snap  r#mod__deserializers__text__parse_records@record-3.json.snap  r#mod__deserializers__text__parse_records_with_schema_registry@record-1.json.snap  r#mod__deserializers__text__parse_records_with_schema_registry@record-2.json.snap  r#mod__deserializers__text__parse_records_with_schema_registry@record-3.json.snap
crates/lib/tests/search/: mod.rs
crates/lib/tests/search/snapshots/: r#mod__search__search_queries@1.sql.snap  r#mod__search__search_queries@1.sql.snap.new  r#mod__search__search_queries@2.sql.snap  r#mod__search__search_queries@2.sql.snap.new  r#mod__search__search_queries@3.sql.snap  r#mod__search__search_queries@3.sql.snap.new
crates/tui/: Cargo.toml  README.md
crates/tui/src/: action.rs  error.rs  lib.rs  partition_lag.rs  records_buffer.rs  schema_detail.rs  theme.rs  tui.rs
crates/tui/src/component/: footer_component.rs  header_component.rs  help_component.rs  issue_component.rs  mod.rs  mod_test.rs  progress_bar_component.rs  record_details_component.rs  records_component.rs  records_component_test.rs  root_component.rs  root_component_test.rs  schemas_component.rs  search_component.rs  state.rs  styles.rs  topic_details_component.rs  topics_and_records_component.rs  topics_component.rs  topics_component_test.rs  topics_list.rs  ui.rs  vertical_scrollable_block.rs
crates/tui/src/component/snapshots/: yozefu_tui__component__footer_component__draw.snap  yozefu_tui__component__header_component__draw.snap  yozefu_tui__component__help_component__draw.snap  yozefu_tui__component__issue_component__draw.snap  yozefu_tui__component__progress_bar_component__draw.snap  yozefu_tui__component__records_component__draw.snap  yozefu_tui__component__records_component_test__draw.snap  yozefu_tui__component__root_component__draw.snap  yozefu_tui__component__root_component_test__draw.snap  yozefu_tui__component__search_component__draw.snap  yozefu_tui__component__topic_details_component__draw.snap  yozefu_tui__component__topics_and_records_component__draw.snap  yozefu_tui__component__topics_component__draw.snap
crates/tui/src/highlighter/: mod.rs  mod_test.rs
crates/tui/tests/: mod.rs.txt
crates/wasm-blueprints/: README.md
crates/wasm-blueprints/rust/: Cargo.toml  Dockerfile  README.md
crates/wasm-blueprints/rust/src/: lib.rs
crates/wasm-types/: Cargo.toml  README.md
docs/: .npmrc  index.md  package-lock.json  package.json  try-it.sh
docs/.vitepress/: config.mts
docs/configuration/: README.md  index.md
docs/demo/: MyConsumer.java  MyProducer.java  kafka.properties
docs/getting-started/: index.md
docs/json-schemas/: exported-kafka-record.json  index.md  (+4 more)
(+68 files in other folders)
