[workspace]
members = [
    "crates/lib",
    "crates/bin",
    "crates/command",
    "crates/app",
    "crates/tui",
    "crates/wasm-types",
    # "crates/wasm-blueprints/rust",
]

default-members = [
    "crates/lib",
    "crates/bin",
    "crates/command",
    "crates/app",
    "crates/tui",
    "crates/wasm-types",
#    "crates/wasm-blueprints/rust",
]
resolver = "3"

[workspace.package]
version = "0.0.16"
edition = "2024"
authors = ["Yann Prono <yann.prono@maif.fr>"]
readme = "README.md"
homepage = "https://github.com/MAIF/yozefu"
repository = "https://github.com/MAIF/yozefu"
documentation = "https://docs.rs/yozefu"
description = "Yozefu is a CLI tool for Apache kafka. It allows you to navigate topics and search Kafka records."
license = "Apache-2.0"
rust-version = "1.85.0"

[workspace.dependencies]
lib = { package = "yozefu-lib", path = "crates/lib", version = "0.0.16" }
app = { package = "yozefu-app", path = "crates/app", version = "0.0.16" }
command = { package = "yozefu-command", path = "crates/command", version = "0.0.16" }
yozefu = { package = "yozefu", path = "crates/bin", version = "0.0.16" }
tui = { package = "yozefu-tui", path = "crates/tui", version = "0.0.16" }
wasm-types = { package = "wasm-types", path = "crates/wasm-types", version = "0.0.16" }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = {version = "0.27.2" }
tracing = "0.1.41"

[profile.release]
opt-level = 3
debug = "none"
debug-assertions = false
overflow-checks = true
strip = true
# lto = "fat"
panic = "abort"
incremental = false

[workspace.metadata.release]
shared-version = true
tag-message = "chore: Release version v{{version}}"
pre-release-commit-message = "chore: Release version v{{version}}"
tag-name = "{{version}}"

[workspace.lints.clippy]
pedantic = {level = "warn", priority = 10 }
arithmetic_overflow = "warn"
checked_conversions = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
integer_division = "warn"
arithmetic_side_effects = "warn"
unchecked_duration_subtraction = "warn"
unwrap_used = "warn"
expect_used = "warn"
panicking_unwrap = "warn"
option_env_unwrap = "warn"
indexing_slicing = "warn"
join_absolute_paths = "warn"
serde_api_misuse = "warn"
match_bool = {level = "allow", priority = 2 }
uninit_vec = "warn"
transmute_int_to_char = "warn"
transmute_int_to_float = "warn"
transmute_ptr_to_ref = "warn"
transmute_undefined_repr = "warn"
missing_errors_doc = {level = "allow", priority = 2 }