[package]
name = "yozefu-app"
description = "The Kafka consumer of Yozefu"
keywords = ["kafka", "consumer", "search", "avro"]
categories = ["command-line-utilities", "development-tools", "gui"]
readme = "README.md"
documentation = "https://docs.rs/yozefu-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
lib = { workspace = true, features = ["native"] }
itertools = "0.14.0"
thousands = "0.2.0"
indexmap = "2.12.0"
rdkafka = { workspace = true }
extism = { version = "1.12.0", features = [] }
url = { version = "2.5.7", features = ["serde"] }
resolve-path = "0.1.0"
directories = "6.0.0"
chrono = "0.4.42"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.23.0"
testing_logger = "0.1.1"
schemars = { version = "1.1.0", features = ["indexmap2", "url2"] }



[features]
ssl-vendored = ["rdkafka/ssl-vendored"]
gssapi-vendored = ["rdkafka/gssapi-vendored"]
cmake-build = ["rdkafka/cmake-build"]