[package]
name = "yozefu-lib"
description = "Core library of yozefu"
readme = "README.md"
keywords = ["kafka", "consumer", "search", "avro"]
categories = ["data-structures", "parser-implementations"]
documentation = "https://docs.rs/yozefu-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4.42", features = ["serde"], optional = true }
itertools = "0.14.0"
strum = { workspace = true, features = ["derive", "strum_macros"], optional = true }
fuzzydate = {version = "0.2.3", optional = true }
nom = "8.0.0"
rdkafka = { version = "0.38.0", features = [], optional = true}
url = "2.5.7"
apache-avro = "0.20.0"
reqwest = { version = "0.12.23", features = ["json"] }
byteorder = "1.5.0"

[dev-dependencies]
insta = { version = "1.43.1", features = ["filters", "glob"] }
protobuf = "3.7.2"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
schemars = { version = "1.0.4", features = ["indexmap2", "url2", "chrono04"]}

[features]
native = [
    "dep:chrono",
    "dep:rdkafka",
    "dep:fuzzydate",
    "dep:strum",
]
