[package]
name = "yozefu-lib"
description = "Core library of yozefu"
readme = "README.md"
keywords = ["kafka", "consumer", "search", "avro"]
categories = ["data-structures", "parser-implementations"]
documentation = "https://docs.rs/yozefu-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4.42", features = ["serde"], optional = true }
itertools = "0.14.0"
strum = { workspace = true, features = ["derive", "strum_macros"], optional = true }
fuzzydate = {version = "0.3.1", optional = true }
nom = "8.0.0"
rdkafka = { version = "0.38.0", features = [], optional = true}
url = "2.5.7"
apache-avro = "0.21.0"
reqwest = { version = "0.12.26", features = ["json"] }
byteorder = "1.5.0"

[dev-dependencies]
insta = { version = "1.45.0", features = ["filters", "glob", "json"] }
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
schemars = { workspace = true, features = ["indexmap2", "url2", "chrono04"]}
proptest = "1.9.0"
mockito = "1.7.1"

[features]
native = [
    "dep:chrono",
    "dep:rdkafka",
    "dep:fuzzydate",
    "dep:strum",
]
