[package]
name = "yozefu-tui"
description = "library for rendering the TUI of Yozefu"
keywords = ["kafka", "consumer", "tui", "terminal"]
readme = "README.md"
categories = ["command-line-utilities", "gui", "development-tools"]
documentation = "https://docs.rs/yozefu-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
serde = { workspace = true }
serde_json = { workspace = true }
tui-input = { version = "0.14.0", features = ["crossterm"], default-features = false }
chrono = "0.4.42"
strum = { workspace = true, features = ["derive", "strum_macros"] }
ratatui = { version = "0.29.0", features = [
    "serde",
    "unstable-rendered-line-info",
] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
itertools = "0.14.0"
bytesize = { version = "2.3.1" }
nom = "8.0.0"
throbber-widgets-tui = { version = "0.9.0" }
futures = "0.3.31"
open = "5.3.3"
tokio-util = "0.7.17"
thousands = "0.2.0"
circular-buffer = "1.1.0"
copypasta = "0.10.2"
rayon = "1.11.0"
lib = { workspace = true }
app = { workspace = true }
tracing = { workspace = true }
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
timeago = "0.5.0"
futures-batch = "0.7.0"
syntect = "5.3.0"
resolve-path = "0.1.0"


[features]
ssl-vendored = ["rdkafka/ssl-vendored"]
gssapi-vendored = ["rdkafka/gssapi-vendored"]


[dev-dependencies]
indexmap = "2.12.1"
insta = { version = "1.45.0", features = ["filters"] }
tempfile = "3.24.0"
